<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cool_activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundcolor"
    tools:context=".ui.detailpage.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/al_activity_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_expanded"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctbl_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conl_detail_collapse"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_backimage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_background_poster"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:id="@+id/iv_backimage_transblack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackColortransparent"
                    android:contentDescription="@string/description_background_poster"
                    android:fitsSystemWindows="true" />

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="@dimen/w_detail_poster"
                    android:layout_height="@dimen/h_detail_poster"
                    android:layout_marginBottom="@dimen/v20dp"
                    android:contentDescription="@string/description_poster"
                    android:src="@color/blackColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="@dimen/v0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/v8dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:minLines="2"
                    android:paddingLeft="@dimen/v15dp"
                    android:paddingRight="@dimen/v15dp"
                    android:text="@string/example_title"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tv24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/iv_backrate"
                    android:layout_width="@dimen/v70dp"
                    android:layout_height="@dimen/v70dp"
                    android:background="@color/blueColortransparent"
                    android:contentDescription="@string/description_backhround_rate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_textrate"
                    android:layout_width="@dimen/v70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/rate_mt_v141dp"
                    android:paddingTop="@dimen/v10dp"
                    android:text="@string/rate_text"
                    android:textAlignment="center"
                    android:textColor="@color/whiteColor"
                    app:layout_constraintBottom_toTopOf="@+id/tv_detail_rate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail_rate"
                    android:layout_width="@dimen/v70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/rate_mb_v140dp"
                    android:paddingBottom="@dimen/v10dp"
                    android:text="@string/example_rate"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/tv24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_activity_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="@dimen/v0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_activity_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conl_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_text_overview"
                style="@style/TextHeader"
                android:text="@string/overview_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_Doverview"
                style="@style/TextHValue"
                android:text="@string/example_overview"
                app:layout_constraintEnd_toEndOf="@+id/tv_text_overview"
                app:layout_constraintStart_toStartOf="@+id/tv_text_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_overview" />

            <TextView
                android:id="@+id/tv_text_information"
                style="@style/TextHeader"
                android:text="@string/information_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_Doverview" />

            <TextView
                android:id="@+id/tv_Ttitle"
                style="@style/TextHeaderH"
                android:text="@string/title_text"
                app:layout_constraintEnd_toStartOf="@+id/verticalline"
                app:layout_constraintStart_toStartOf="@+id/tv_text_information"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_information" />

            <TextView
                android:id="@+id/tv_Dtitle"
                style="@style/TextValue"
                android:text="@string/example_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_text_information"
                app:layout_constraintStart_toEndOf="@+id/verticalline"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_information" />

            <TextView
                android:id="@+id/tv_Trelease"
                style="@style/TextHeaderH"
                android:text="@string/release_text"
                app:layout_constraintEnd_toStartOf="@+id/verticalline"
                app:layout_constraintStart_toStartOf="@+id/tv_Ttitle"
                app:layout_constraintTop_toBottomOf="@+id/tv_Dtitle" />

            <TextView
                android:id="@+id/tv_Drelease"
                style="@style/TextValue"
                android:text="@string/example_release"
                app:layout_constraintEnd_toEndOf="@+id/tv_text_information"
                app:layout_constraintStart_toEndOf="@+id/verticalline"
                app:layout_constraintTop_toBottomOf="@+id/tv_Dtitle" />

            <TextView
                android:id="@+id/tv_Tlanguage"
                style="@style/TextHeaderH"
                android:text="@string/language_text"
                app:layout_constraintEnd_toStartOf="@+id/verticalline"
                app:layout_constraintStart_toStartOf="@+id/tv_Trelease"
                app:layout_constraintTop_toBottomOf="@+id/tv_Drelease" />

            <TextView
                android:id="@+id/tv_Dlanguage"
                style="@style/TextValue"
                android:text="@string/example_language"
                app:layout_constraintEnd_toEndOf="@+id/tv_text_information"
                app:layout_constraintStart_toEndOf="@+id/verticalline"
                app:layout_constraintTop_toBottomOf="@+id/tv_Drelease" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="89dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/HeadError"
                android:text="@string/head_error" />

            <TextView
                style="@style/BodyError"
                android:text="@string/body_error" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>